about me and contact sections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Orange by The Awwwesomes</title>
@@ -8,28 +9,32 @@
     <link href="https://fonts.googleapis.com/css?family=Radley|Space+Mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Radley|Space+Mono&display=swap" rel="stylesheet">
 </head>
-    <body>
+
+<body>
     <header class="hero-image">
         <div class="container">
-                <nav>
-                        <ul>
-                            <li><a href="" class="nav-link">intro</a> </li>
-                            <li><a href="" class="nav-link">projects</a></li>
-                            <li><a href="" class="nav-link">about me</a></li>
-                            <li><a href="" class="nav-link">contact</a></li>
-                        </ul>
-                    </nav>
-      <div class="hero-text">
-        <h1>creative soul</h1>
-        <h3>meet me and my works<br>
-            designer & content strategist from warsaw</h3>
-      </div>
-    </div>
+            <nav>
+                <ul>
+                    <li><a href="" class="nav-link">intro</a> </li>
+                    <li><a href="" class="nav-link">projects</a></li>
+                    <li><a href="" class="nav-link">about me</a></li>
+                    <li><a href="" class="nav-link">contact</a></li>
+                </ul>
+            </nav>
+            <div class="hero-text">
+                <h1>creative soul</h1>
+                <h3>meet me and my works<br>
+                    designer & content strategist from warsaw</h3>
+            </div>
+        </div>
     </header>
     <section class="intro">
         <div class="container intro-grid-container">
             <h4 class="section-title">content<br>& design strategy</h4>
-            <p class="intro-para">Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog. Meggings cloud bread cray, 3 wolf moon before they sold out literally normcore retro ennui fam umami letterpress actually distillery vinyl. Wayfarers slow-carb umami VHS. Unicorn activated charcoal fanny pack tbh subway tile knausgaard PBR&B.</p>
+            <p class="intro-para">Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog.
+                Meggings cloud bread cray, 3 wolf moon before they sold out literally normcore retro ennui fam umami
+                letterpress actually distillery vinyl. Wayfarers slow-carb umami VHS. Unicorn activated charcoal fanny
+                pack tbh subway tile knausgaard PBR&B.</p>
             <h4 class="section-title">the skillset</h4>
             <ul class="skillset-list">
                 <li class="skillset-list-item">design</li>
@@ -38,14 +43,69 @@
                 <li class="skillset-list-item">planning</li>
                 <li class="skillset-list-item">prototyping</li>
             </ul>
-            <a href="" class="section-link">read more on linkedin</a> 
-            <img src="img/author.jpg" alt="author" class="img-author">
+            <a href="" class="section-link">read more on linkedin</a>
+            <figure class="fig-author">
+                <img src="img/author.jpg" alt="author" class="pic-author">
+                <figcaption>photo by Amy Ferris / Usplash</figcaption>
+            </figure>
             <img src="img/cross.svg" alt="cross" class="cross">
         </div>
     </section>
-    
+    <section class="projects">
+        <div class="container">
+            <h4 class="section-title">projects</h4>
+            <p class="intro-para">Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog.</p>
+            <div class="projects-grid-container">
+                <div class="box-vintage-house">
+                    <img src="img/vintage-house.jpg" alt="vintage house" class="img-vintage-house">
+                    <h5 class="primary">+ the vintage house</h5>
+                    <p>Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog.</p>
+                </div>
+                <div class="box-colors-of-interior">
+                    <img src="img/colors-of-interior.jpg" alt="colors of interior" class="img-colors-of-interior">
+                    <h5 class="primary">+ colors of interior</h5>
+                    <p>Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog.</p>
+                </div>
+                <div class="box-additional-info">
+                    <h5 class="primary ">+ the greenery</h5>
+                    <p> Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog.</p>
+                    <h5 class="primary">+ another project</h5>
+                    <p> Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog.</p>
+                    <h5 class="primary">+ and one more</h5>
+                    <p>Fashion axe austin DIY wolf 3 wolf moon, direct trade YOLO tote bag paleo blog.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-me">
+        <div class="container">
+            <h4 class="section-title">for more updates follow me on <span class="primary">instagram</span></h4>
+            <div class="about-me-container">
+<img src="img/instagram1.jpg" alt="stairs" class="insta1">
+<img src="img/instagram2.jpg" alt="wall" class="insta2">
+<img src="img/instagram3.jpg" alt="tunnel" class="insta3">
+<img src="img/instagram4.jpg" alt="shade" class="insta4">
+<a href="" class="section-link insta-link">@thisismyinstagram</a>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="container contact-container">
+            <h2 class="contact-heading">let's stay</h2>
+            <img src="img/line.svg" alt=" " class="contact-line">
+            <p class="contact-para"></p>
+        </div>
+    </section>
 
-    </body>
+    <footer>
+        <div class="container footer-container">
+            <p class="footer-para">#codesummer challenge organized by <a href="https://theawwwesomes.org/" class="primary">The Awwwesomes</a><br>
+                photos taken from <a href="https://unsplash.com/" class="primary">Unsplash</a><br>
+                coded by <a href="https://klamarka.github.io/my-portfolio/" class="primary">klamarka</a> </p>
+        </div>
+    </footer>
+
+
+</body>
+
 </html>
-
-
